package com.survivalcoding.assignments_01_instance.exam01;

public interface Healable {

    void beHealed(int amount);

}
